welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:12: error: identifier expected but '}' found.
	}
        ^